--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.543.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
